--- a/WeChatMoments/app/src/main/AndroidManifest.xml
+++ b/WeChatMoments/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeChatMoments"
         android:usesCleartextTraffic="true">
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.WeChatMoments.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
