--- a/TodayNews/app/src/main/AndroidManifest.xml
+++ b/TodayNews/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
-            android:name=".view.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.TodayNews.NoActionBar">
             <intent-filter>
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.WebViewActivity" />
+        <activity android:name=".ui.common.WebViewActivity" />
     </application>
 
 </manifest>
